envoy.yaml
# admin:
#   # access_log_path and address are required by Envoy, Consul doesn't care what
#   # they are set to though and never accesses the admin API.

#   access_log_path: /tmp/admin_access.log
#   address:
#     socket_address: { address: 0.0.0.0, port_value: 9901 }
# node:
#   # cluter is required by Envoy but Consul doesn't use it
#   cluster: "envoy-cluster"
#   # id must be the ID (not name if they differ) of the proxy service
#   # registration in Consul
#   id: "<proxy_service_id>"
# static_resources:
#   clusters:
#   # local_agent is the "cluster" used to make further discovery requests for 
#   # config and should point to the gRPC port of the local Consul agent instance.
#   - name: local_agent
#     connect_timeout: 1s
#     type: STATIC
#     # tls_context is needed if and only if Consul agent TLS is configured
#     tls_context:
#       common_tls_context:
#         validation_context:
#           trusted_ca:
#             filename: "<path to CA cert file Consul is using>"
#     http2_protocol_options: {}
#     hosts:
#     - socket_address:
#        address: "<agent's local IP address, usually 127.0.0.1>"
#        port_value: "<agent's grpc port, default 8502>"
# dynamic_resources:
#   lds_config:
#     ads: {}
#   cds_config:
#     ads: {}
#   ads_config:
#     api_type: GRPC
#     grpc_services:
#       initial_metadata:
#       - key: "x-consul-token"
#         token: "<Consul ACL token with service:write on the target service>"
#       envoy_grpc:
#         cluster_name: local_agent
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

clusters:
- name: service_cluster
  connect_timeout: 0.25s
  type: LOGICAL_DNS
  # Comment out the following line to test on v6 networks
  dns_lookup_family: V4_ONLY
  lb_policy: ROUND_ROBIN
  load_assignment:
    cluster_name: service_cluster
    endpoints:
    - lb_endpoints:
      - endpoint:
          address:
            socket_address:
              address: www.google.com
              port_value: 443
  tls_context:
    sni: www.google.com

listeners:
- name: listener_0
  address:
    socket_address: { address: 0.0.0.0, port_value: 80 }
  filter_chains:
  - filters:
    - name: envoy.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
        stat_prefix: ingress_http
        codec_type: AUTO
        route_config:
          name: local_route
          virtual_hosts:
          - name: local_service
            domains: ["*"]
            routes:
            - match: { prefix: "/" }
              route: { host_rewrite: www.google.com, cluster: service_google }
        http_filters:
        - name: envoy.router
